# imagelab

./: CONTRIBUTING.md  README.md  docker-compose.yml  package-lock.json
imagelab-backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
imagelab-backend/alembic/: env.py
imagelab-backend/app/: config.py  database.py  exceptions.py  main.py
imagelab-backend/app/models/: __init__.py  pipeline.py
imagelab-backend/app/operators/: base.py  registry.py
imagelab-backend/app/operators/augmentation/: gaussian_noise.py  salt_pepper_noise.py  sepia_filter.py
imagelab-backend/app/operators/basic/: read_image.py  write_image.py
imagelab-backend/app/operators/blurring/: blur.py  gaussian_blur.py  median_blur.py
imagelab-backend/app/operators/conversions/: bgr_to_hsv.py  bgr_to_lab.py  bgr_to_ycrcb.py  brightness_and_contrast.py  channel_split.py  color_maps.py  color_to_binary.py  gray_image.py  (+5 more)
imagelab-backend/app/routers/: pipeline.py
imagelab-backend/app/services/: pipeline_executor.py
imagelab-backend/app/utils/: color.py  image.py
imagelab-backend/tests/: conftest.py  test_apply_borders.py  test_augmentation_operators.py  test_blurring_operators.py  test_canny_edge.py  test_color_utils.py  test_conversion_operators.py  test_draw_text.py  test_drawing_operators.py  test_filtering_operators.py  test_invert_image.py  test_mean_shift_segmentation.py  test_pipeline_debug.py  test_roberts_cross.py  test_scale_image.py  test_segmentation_operators.py  test_sobel_scharr.py  test_thresholding_operators.py  test_transformation_operators.py
(+93 files in other folders)
